--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,12 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --primaryYellow: #f0c929;
+    --primaryRed: #d32a1e
   }
 }
 
